<?xml version="1.0"?>
<package format="2">
  <name>vrmapping_msgs</name>
  <version>1.7.4</version>
  <description>Definition of the pplanner map message type.</description>
  <maintainer email="yinghaojia@163.com">Yinghao Jia</maintainer>
  <license>BSD</license>
  <author email="yinghaojia@163.com">Yinghao Jia</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <exec_depend>message_runtime</exec_depend>
</package>
